--- a/myMall/index.html
+++ b/myMall/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>mall</title>
+    <title>我的商城</title>
+    <link rel="stylesheet" type="text/css" href="static/reset.css">
   </head>
   <body>
     <div id="app"></div>
